fix features block overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -1382,6 +1382,7 @@ hr {
   }
 
   .features-block {
+    overflow: visible;
     align-items: center;
   }
 
